<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    android:padding="20dp">

    <TextView
        android:id="@+id/start_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Start_of_app"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/started_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/started_sub"
        android:fontFamily="@font/montserrat"
        android:lineHeight="20sp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_title" />
    <ImageView
        android:id="@+id/img_illustration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/illustration"
        android:contentDescription="@string/illustration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        style="@style/WhiteButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="88dp"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_goneMarginBottom="15dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        style="@style/WhiteButton"
        android:text="@string/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>