<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp"
    tools:context=".LoginActivity"
    tools:layout_editor_absoluteX="-8dp"
    tools:layout_editor_absoluteY="-45dp">

    <TextView
        android:id="@+id/loginTitle"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="184dp"
        android:text="@string/titleLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="300dp"
        android:hint="@string/hintEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_circle_account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_email"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="339dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hintPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:startIconDrawable="@drawable/ic_circle_account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_password"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="411dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/forgotPassword"
        android:textColor="@color/btn_primary"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="77dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:layout_marginBottom="25dp"
        style="@style/LoginButton"
        app:layout_constraintBottom_toTopOf="@+id/dont_have_acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dont_have_acc"
        style="@style/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_don_t_have_an_account"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="598dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>