<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp"
    tools:context=".RegisterActivity"
    tools:layout_editor_absoluteX="-64dp"
    tools:layout_editor_absoluteY="-135dp">

    <TextView
        android:id="@+id/registerTitle"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullname"
        style="@style/TextInputLayout"
        android:layout_width="328dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="14dp"
        android:hint="@string/fullName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/registerTitle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_fullname"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:inputType="text"
            tools:layout_editor_absoluteX="-28dp"
            tools:layout_editor_absoluteY="286dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/TextInputLayout"
        android:layout_width="328dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/emailRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullname"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_email"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="-28dp"
            tools:layout_editor_absoluteY="286dp" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        style="@style/TextInputLayout"
        android:layout_width="328dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_username"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="-28dp"
            tools:layout_editor_absoluteY="356dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/TextInputLayout"
        android:layout_width="328dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/enterPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_password"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="-28dp"
            tools:layout_editor_absoluteY="411dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPassword"
        style="@style/TextInputLayout"
        android:layout_width="328dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_Confirmpassword"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="-28dp"
            tools:layout_editor_absoluteY="411dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgotPassword"
        android:textColor="@color/btn_primary"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        tools:layout_editor_absoluteX="-7dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        style="@style/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_register"
        app:layout_constraintBottom_toTopOf="@+id/have_acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/have_acc"
        style="@style/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/i_have_an_account"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>